--- a/docs/modules/ROOT/pages/servlet/authorization/method-security.adoc
+++ b/docs/modules/ROOT/pages/servlet/authorization/method-security.adoc
@@ -955,7 +955,7 @@ Kotlin::
 @Target(ElementType.METHOD, ElementType.TYPE)
 @Retention(RetentionPolicy.RUNTIME)
 @PreAuthorize("hasRole('{value}')")
-annotation class IsAdmin(val value: String)
+annotation class HasRole(val value: String)
 ----
 ======
 
