--- a/docs/modules/ROOT/pages/servlet/authentication/logout.adoc
+++ b/docs/modules/ROOT/pages/servlet/authentication/logout.adoc
@@ -315,7 +315,7 @@ javadoc:org.springframework.security.web.authentication.logout.LogoutSuccessHand
 For example, instead of redirecting, you may want to only return a status code.
 In this case, you can provide a success handler instance, like so:
 
-.Using Clear-Site-Data to Clear Cookies
+.Customizing Logout Success to Return HTTP Status Code
 [tabs]
 ======
 Java::
